crates/macros/src/snapshots/caesura_macros__tests__expand_no_commands.snap
---
source: crates/macros/src/tests.rs
expression: output
---
/// Partial options struct with optional fields for CLI/YAML parsing.
#[derive(
    ::clap::Args,
    ::std::clone::Clone,
    ::std::fmt::Debug,
    ::std::default::Default,
    ::serde::Deserialize,
    ::serde::Serialize
)]
pub struct NoCommandOptionsPartial {
    ///
    /// Default: `100`
    #[arg(long = "limit")]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub limit: Option<u32>,
}
impl NoCommandOptionsPartial {
    fn resolve_internal(
        self,
        validate: bool,
    ) -> ::std::result::Result<
        NoCommandOptions,
        ::std::vec::Vec<crate::options::OptionRule>,
    > {
        let mut errors = ::std::vec::Vec::new();
        let limit = self.limit;
        let resolved = NoCommandOptions {
            limit: limit.unwrap_or_else(|| 100),
        };
        if validate {
            resolved.validate(&mut errors);
        }
        if errors.is_empty() {
            ::std::result::Result::Ok(resolved)
        } else {
            ::std::result::Result::Err(errors)
        }
    }
}
impl crate::options::OptionsPartialContract for NoCommandOptionsPartial {
    type Resolved = NoCommandOptions;
    fn merge(&mut self, other: Self) {
        if self.limit.is_none() {
            self.limit = other.limit;
        }
    }
    fn resolve_without_validation(self) -> NoCommandOptions {
        self.resolve_internal(false).expect("validation disabled")
    }
    fn resolve(
        self,
    ) -> ::std::result::Result<
        NoCommandOptions,
        ::std::vec::Vec<crate::options::OptionRule>,
    > {
        self.resolve_internal(true)
    }
}
impl ::std::default::Default for NoCommandOptions {
    fn default() -> Self {
        Self { limit: 100 }
    }
}
impl crate::options::Documented for NoCommandOptions {
    fn doc_metadata() -> &'static crate::options::OptionsDoc {
        static DOC: ::std::sync::LazyLock<crate::options::OptionsDoc> = ::std::sync::LazyLock::new(||
        crate::options::OptionsDoc {
            name: "NoCommandOptions",
            description: "",
            fields: ::std::vec![
                crate ::options::FieldDoc { config_key : "limit", cli_flag : "--limit",
                field_type : "u32", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& (100)).unwrap()),
                default_doc : ::std::option::Option::None, description : "", }
            ],
        });
        &DOC
    }
}
const _: () = {
    fn __register(
        provider: &mut crate::options::OptionsProvider,
        services: &mut ::di::ServiceCollection,
    ) {
        provider.register::<NoCommandOptionsPartial>(services);
    }
    ::inventory::submit!(
        crate ::options::OptionsRegistration { doc_metadata : < NoCommandOptions as crate
        ::options::Documented > ::doc_metadata, register : __register, }
    );
};
