crates/macros/src/snapshots/caesura_macros__tests__expand_verify_options.snap
---
source: crates/macros/src/tests.rs
expression: expand_options_from_file(source)
---
/// Partial options struct with optional fields for CLI/YAML parsing.
#[derive(
    ::clap::Args,
    ::std::clone::Clone,
    ::std::fmt::Debug,
    ::std::default::Default,
    ::serde::Deserialize,
    ::serde::Serialize
)]
pub struct VerifyOptionsPartial {
    /// Should the hash check of source files be skipped?
    ///
    /// Note: This is only useful for development and should probably not be used.
    ///
    /// Default: `false`
    #[arg(long = "no-hash-check", num_args = 0..= 1, default_missing_value = "true")]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub no_hash_check: Option<bool>,
    /// Should sources with specific tags be excluded?
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub exclude_tags: Option<Vec<String>>,
    /// Should the decode check of each FLAC be skipped?
    ///
    /// By default every audio frame is decoded to detect truncation or corruption.
    ///
    /// Default: `false`
    #[arg(long = "no-decode-check", num_args = 0..= 1, default_missing_value = "true")]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub no_decode_check: Option<bool>,
}
impl VerifyOptionsPartial {
    fn resolve_internal(
        self,
        validate: bool,
    ) -> ::std::result::Result<
        VerifyOptions,
        ::std::vec::Vec<::caesura_options::OptionIssue>,
    > {
        let mut validator = ::caesura_options::OptionsValidator::new();
        let no_hash_check = self.no_hash_check;
        let exclude_tags = self.exclude_tags;
        let no_decode_check = self.no_decode_check;
        let resolved = VerifyOptions {
            no_hash_check: no_hash_check.unwrap_or_default(),
            exclude_tags,
            no_decode_check: no_decode_check.unwrap_or_default(),
        };
        if validate {
            resolved.validate(&mut validator);
        }
        let issues = validator.into_issues();
        if issues.is_empty() {
            ::std::result::Result::Ok(resolved)
        } else {
            ::std::result::Result::Err(issues)
        }
    }
}
impl ::caesura_options::OptionsPartialContract for VerifyOptionsPartial {
    type Resolved = VerifyOptions;
    fn merge(&mut self, other: Self) {
        if self.no_hash_check.is_none() {
            self.no_hash_check = other.no_hash_check;
        }
        if self.exclude_tags.is_none() {
            self.exclude_tags = other.exclude_tags;
        }
        if self.no_decode_check.is_none() {
            self.no_decode_check = other.no_decode_check;
        }
    }
    fn resolve_without_validation(self) -> VerifyOptions {
        self.resolve_internal(false).expect("validation disabled")
    }
    fn resolve(
        self,
    ) -> ::std::result::Result<
        VerifyOptions,
        ::std::vec::Vec<::caesura_options::OptionIssue>,
    > {
        self.resolve_internal(true)
    }
}
impl ::std::default::Default for VerifyOptions {
    fn default() -> Self {
        Self {
            no_hash_check: ::std::default::Default::default(),
            exclude_tags: ::std::option::Option::None,
            no_decode_check: ::std::default::Default::default(),
        }
    }
}
impl ::caesura_options::Documented for VerifyOptions {
    fn doc_metadata() -> &'static ::caesura_options::OptionsDoc {
        static DOC: ::std::sync::LazyLock<::caesura_options::OptionsDoc> = ::std::sync::LazyLock::new(||
        ::caesura_options::OptionsDoc {
            name: "VerifyOptions",
            description: "Options for verify",
            fields: ::std::vec![
                ::caesura_options::FieldDoc { config_key : "no_hash_check", cli_flag :
                "--no-hash-check", field_type : "bool", default_value :
                ::std::option::Option::Some("false".to_owned()), default_doc :
                ::std::option::Option::None, description :
                "Should the hash check of source files be skipped?<br>Note: This is only useful for development and should probably not be used.",
                }, ::caesura_options::FieldDoc { config_key : "exclude_tags", cli_flag :
                "--exclude-tags", field_type : "Option<Vec<String>>", default_value :
                ::std::option::Option::None, default_doc : ::std::option::Option::None,
                description : "Should sources with specific tags be excluded?", },
                ::caesura_options::FieldDoc { config_key : "no_decode_check", cli_flag :
                "--no-decode-check", field_type : "bool", default_value :
                ::std::option::Option::Some("false".to_owned()), default_doc :
                ::std::option::Option::None, description :
                "Should the decode check of each FLAC be skipped?<br>By default every audio frame is decoded to detect truncation or corruption.",
                }
            ],
        });
        &DOC
    }
}
const _: () = {
    fn __register(
        provider: &mut ::caesura_options::OptionsProvider,
        services: &mut ::di::ServiceCollection,
    ) {
        provider.register::<VerifyOptionsPartial>(services);
    }
    ::inventory::submit!(
        ::caesura_options::OptionsRegistration { doc_metadata : < VerifyOptions as
        ::caesura_options::Documented > ::doc_metadata, register : __register, }
    );
};
