crates/macros/src/snapshots/caesura_macros__tests__expand_with_custom_arg_attrs.snap
---
source: crates/macros/src/tests.rs
expression: output
---
/// Partial options struct with optional fields for CLI/YAML parsing.
#[derive(
    ::clap::Args,
    ::std::clone::Clone,
    ::std::fmt::Debug,
    ::std::default::Default,
    ::serde::Deserialize,
    ::serde::Serialize
)]
pub struct CustomArgOptionsPartial {
    #[arg(long = "custom-name", value_name = "PATH")]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub file_path: Option<String>,
}
impl CustomArgOptionsPartial {
    fn resolve_internal(
        self,
        validate: bool,
    ) -> ::std::result::Result<
        CustomArgOptions,
        ::std::vec::Vec<::caesura_options::OptionRule>,
    > {
        let mut errors = ::std::vec::Vec::new();
        let file_path = self.file_path;
        let resolved = CustomArgOptions {
            file_path: file_path.unwrap_or_default(),
        };
        if validate {
            resolved.validate(&mut errors);
        }
        if errors.is_empty() {
            ::std::result::Result::Ok(resolved)
        } else {
            ::std::result::Result::Err(errors)
        }
    }
}
impl ::caesura_options::OptionsPartialContract for CustomArgOptionsPartial {
    type Resolved = CustomArgOptions;
    fn merge(&mut self, other: Self) {
        if self.file_path.is_none() {
            self.file_path = other.file_path;
        }
    }
    fn resolve_without_validation(self) -> CustomArgOptions {
        self.resolve_internal(false).expect("validation disabled")
    }
    fn resolve(
        self,
    ) -> ::std::result::Result<
        CustomArgOptions,
        ::std::vec::Vec<::caesura_options::OptionRule>,
    > {
        self.resolve_internal(true)
    }
}
impl ::std::default::Default for CustomArgOptions {
    fn default() -> Self {
        Self {
            file_path: ::std::default::Default::default(),
        }
    }
}
impl ::caesura_options::Documented for CustomArgOptions {
    fn doc_metadata() -> &'static ::caesura_options::OptionsDoc {
        static DOC: ::std::sync::LazyLock<::caesura_options::OptionsDoc> = ::std::sync::LazyLock::new(||
        ::caesura_options::OptionsDoc {
            name: "CustomArgOptions",
            description: "",
            fields: ::std::vec![
                ::caesura_options::FieldDoc { config_key : "file_path", cli_flag :
                "--custom-name", field_type : "String", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < String >
                ::default()).unwrap()), default_doc : ::std::option::Option::None,
                description : "", }
            ],
        });
        &DOC
    }
}
const _: () = {
    fn __register(
        provider: &mut ::caesura_options::OptionsProvider,
        services: &mut ::di::ServiceCollection,
    ) {
        provider.register::<CustomArgOptionsPartial>(services);
    }
    ::inventory::submit!(
        ::caesura_options::OptionsRegistration { doc_metadata : < CustomArgOptions as
        ::caesura_options::Documented > ::doc_metadata, register : __register, }
    );
};
