crates/macros/src/snapshots/caesura_macros__tests__expand_with_custom_partial_name.snap
---
source: crates/macros/src/tests.rs
expression: output
---
/// Partial options struct with optional fields for CLI/YAML parsing.
#[derive(
    ::clap::Args,
    ::std::clone::Clone,
    ::std::fmt::Debug,
    ::std::default::Default,
    ::serde::Deserialize,
    ::serde::Serialize
)]
pub struct CustomPartial {
    #[arg(long = "value")]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub value: Option<u32>,
}
impl CustomPartial {
    fn resolve_internal(
        self,
        validate: bool,
    ) -> ::std::result::Result<
        CustomOptions,
        ::std::vec::Vec<::caesura_options::OptionIssue>,
    > {
        let mut validator = ::caesura_options::OptionsValidator::new();
        let value = self.value;
        let resolved = CustomOptions {
            value: value.unwrap_or_default(),
        };
        if validate {
            resolved.validate(&mut validator);
        }
        let issues = validator.into_issues();
        if issues.is_empty() {
            ::std::result::Result::Ok(resolved)
        } else {
            ::std::result::Result::Err(issues)
        }
    }
}
impl ::caesura_options::OptionsPartialContract for CustomPartial {
    type Resolved = CustomOptions;
    fn merge(&mut self, other: Self) {
        if self.value.is_none() {
            self.value = other.value;
        }
    }
    fn resolve_without_validation(self) -> CustomOptions {
        self.resolve_internal(false).expect("validation disabled")
    }
    fn resolve(
        self,
    ) -> ::std::result::Result<
        CustomOptions,
        ::std::vec::Vec<::caesura_options::OptionIssue>,
    > {
        self.resolve_internal(true)
    }
}
impl ::std::default::Default for CustomOptions {
    fn default() -> Self {
        Self {
            value: ::std::default::Default::default(),
        }
    }
}
impl ::caesura_options::Documented for CustomOptions {
    fn doc_metadata() -> &'static ::caesura_options::OptionsDoc {
        static DOC: ::std::sync::LazyLock<::caesura_options::OptionsDoc> = ::std::sync::LazyLock::new(||
        ::caesura_options::OptionsDoc {
            name: "CustomOptions",
            description: "",
            fields: ::std::vec![
                ::caesura_options::FieldDoc { config_key : "value", cli_flag : "--value",
                field_type : "u32", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < u32 >
                ::default()).unwrap()), default_doc : ::std::option::Option::None,
                description : "", }
            ],
        });
        &DOC
    }
}
const _: () = {
    fn __register(
        provider: &mut ::caesura_options::OptionsProvider,
        services: &mut ::di::ServiceCollection,
    ) {
        provider.register::<CustomPartial>(services);
    }
    ::inventory::submit!(
        ::caesura_options::OptionsRegistration { doc_metadata : < CustomOptions as
        ::caesura_options::Documented > ::doc_metadata, register : __register, }
    );
};
