crates/macros/src/snapshots/caesura_macros__tests__expand_with_default_fn.snap
---
source: crates/macros/src/lib.rs
expression: output
---
/// Partial options struct with optional fields for CLI/YAML parsing.
#[derive(
    ::clap::Args,
    ::std::clone::Clone,
    ::std::fmt::Debug,
    ::std::default::Default,
    ::serde::Deserialize,
    ::serde::Serialize
)]
pub struct OptionsWithDefaultFnPartial {
    #[arg(long = "indexer")]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub indexer: Option<String>,
    #[arg(long = "indexer-url")]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub indexer_url: Option<String>,
}
impl crate::options::OptionsPartial for OptionsWithDefaultFnPartial {
    type Resolved = OptionsWithDefaultFn;
    fn merge(&mut self, other: Self) {
        if self.indexer.is_none() {
            self.indexer = other.indexer;
        }
        if self.indexer_url.is_none() {
            self.indexer_url = other.indexer_url;
        }
    }
    fn resolve(mut self) -> OptionsWithDefaultFn {
        let defaults = self.clone();
        OptionsWithDefaultFn {
            indexer: self.indexer.or_else(|| default_indexer(&defaults)),
            indexer_url: self.indexer_url.or_else(|| default_indexer_url(&defaults)),
        }
    }
}
impl crate::options::Validate for OptionsWithDefaultFn {
    fn validate(&self, errors: &mut ::std::vec::Vec<crate::options::OptionRule>) {
        self.validate_partial(errors)
    }
}
impl ::std::default::Default for OptionsWithDefaultFn {
    fn default() -> Self {
        Self {
            indexer: ::std::option::Option::None,
            indexer_url: ::std::option::Option::None,
        }
    }
}
impl crate::options::Documented for OptionsWithDefaultFn {
    fn doc_metadata() -> &'static crate::options::OptionsDoc {
        static FIELDS: &[crate::options::FieldDoc] = &[
            crate::options::FieldDoc {
                config_key: "indexer",
                cli_flag: "--indexer",
                field_type: "Option<String>",
                default: ::std::option::Option::None,
                description: "",
            },
            crate::options::FieldDoc {
                config_key: "indexer_url",
                cli_flag: "--indexer-url",
                field_type: "Option<String>",
                default: ::std::option::Option::None,
                description: "",
            },
        ];
        static DOC: crate::options::OptionsDoc = crate::options::OptionsDoc {
            name: "OptionsWithDefaultFn",
            description: "",
            fields: FIELDS,
        };
        &DOC
    }
}
